[project]
name = "ppo_lunar_lander_robotics_course"
version = "1.0.0"
description = "PPO training for Lunar Lander continuous control in LunarLanderContinuousV3"
authors = [{name = "Mattia Fornari, Luca Pugnetti, email = "m.fornari002@studenti.unibs.it, 
l.pugnetti@studenti.unibs.it"}]
requires-python = ">=3.10"
dependencies = [
    "gymnasium[box2d]>=0.29.1",
    "stable-baselines3>=2.2.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "tensorboard>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
